fixed footer address/copyright spacing

--- a/css/index.css
+++ b/css/index.css
@@ -294,6 +294,7 @@ header .header-content .menu .menu-button {
   font-size: 6.4rem;
   font-weight: bold;
   color: white;
+  letter-spacing: -2px;
 }
 @media ( max-width: 500px ) {
   .home .cta h2 {
@@ -427,6 +428,7 @@ header .header-content .menu .menu-button {
 @media ( max-width: 500px ) {
   .home .main-content .content-top .content-module:nth-child(2) {
     flex-direction: column;
+    margin-bottom: 40px;
   }
 }
 @media ( max-width: 500px ) {
@@ -442,10 +444,12 @@ header .header-content .menu .menu-button {
 }
 .home .main-content .recent-projects h3 {
   margin-bottom: 45px;
+  letter-spacing: -1px;
 }
 @media ( max-width: 500px ) {
   .home .main-content .recent-projects h3 {
     padding-left: 15px;
+    margin-bottom: 22px;
   }
 }
 .home .main-content .recent-projects .project-module {
@@ -585,8 +589,13 @@ footer .contact {
 @media ( max-width: 500px ) {
   footer .contact {
     flex-direction: column;
+    margin-top: 28px;
+    padding-top: 28px;
     width: 90%;
   }
+}
+footer .contact address {
+  padding-bottom: 14px;
 }
 @media ( max-width: 500px ) {
   footer .contact address h5 {
@@ -615,7 +624,9 @@ footer .contact .contact-form #email {
 }
 @media ( max-width: 500px ) {
   footer .contact .contact-form #email {
-    width: 83%;
+    width: 90%;
+    height: 50px;
+    padding-bottom: 8px;
   }
 }
 footer .contact .contact-form h5 {
@@ -633,6 +644,7 @@ footer .copyright p {
   footer .copyright {
     justify-content: flex-start;
     padding-left: 18px;
+    margin-top: 22px;
   }
 }
 .services {
