--- a/less/footer.less
+++ b/less/footer.less
@@ -23,13 +23,18 @@ footer {
         justify-content: space-between;
         @media @phone {
             flex-direction: column;
+            margin-top: 28px;
+            padding-top: 28px;
             width: 90%;
         }
-        address h5 {
-            @media @phone {
-            padding-top: 20px;
+        address {
+            padding-bottom: 14px;
+            h5 {
+                @media @phone {
+                padding-top: 20px;
+                }
             }
-        }
+        } 
         .contact-form {
             display: flex;
             flex-direction: column;
@@ -45,7 +50,9 @@ footer {
                 padding-left: 6px;
                 margin-bottom: 4px;
                 @media @phone {
-                    width: 83%;
+                    width: 90%;
+                    height: 50px;
+                    padding-bottom: 8px;
                 }
             }
             h5 {
@@ -62,6 +69,7 @@ footer {
         @media @phone {
             justify-content: flex-start;
             padding-left: 18px;
+            margin-top: 22px;
         }
     }
 }
